# hitomezashi

./: Cargo.toml  README.md
src/: color.rs  lib.rs  main.rs  nft.rs  pattern.rs  seed.rs  your_name_pattern.rs
