[package]
name = "hitomezashi"
version = "0.1.0"
edition = "2021"

default-run = "hitomezashi"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hitomezashi"

[[bin]]
path = "src/your_name_pattern.rs"
name = "your-name-pattern"
[[bin]]
path = "src/nft.rs"
name = "nft"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
image = "0.24.7"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
